Mon Oct 13 16:30:43 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/dcps_tests.lst:

          Don't run RTPS tests on mosquito with no BITs

        * tests/DCPS/Compiler/idl_test1_main/main.cpp:
        * tests/DCPS/Compiler/idl_test3_main/main.cpp:
        * tests/DCPS/ConfigTransports/publisher.cpp:
        * tests/DCPS/ConfigTransports/subscriber.cpp:

          Catch exceptions pointed out by Coverity

        * tools/modeling/codegen/model/Entities.cpp:

          Check return code pointed out by Coverity

Thu Oct  9 18:00:05 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps.mpb:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/monitor/monitor.mpc:

          Revert the previous two changes.  Changing the dependency on
          the TAO portable server library needs to be rethought.

Thu Oct  9 14:48:51 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Consistent and clearer logging regarding resends and naks.

Thu Oct  9 11:43:16 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps_inforepodiscovery.mpb:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/monitor/monitor.mpc:

          Move the TAO Portable Server library dependency to the Info Repo
          and other libraries as this is the way some VC++ builds need it.

Wed Oct  8 15:41:58 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps.mpb:
        * MPC/config/dcps_inforepodiscovery.mpb:

          Move dependency on the TAO Portable Server library from the dcps
          project to the dcps_inforepodiscovery project.  OpenDDS applications
          not using InfoRepo discovery are not CORBA servers and do not
          require the TAO Portable Server library.

Tue Oct  7 20:56:13 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/Footprint: