@@ -153,7 +153,7 @@ int DCPS_IR_Publication::remove_associated_subscription(DCPS_IR_Subscription* su
 
     if (participant_->is_alive() && this->participant_->isOwner()) {
       try {
-        if (TAO_debug_level > 0) {
+        if (OpenDDS::DCPS::DCPS_debug_level > 0) {
           ACE_DEBUG((LM_DEBUG,
                      ACE_TEXT("(%P|%t) DCPS_IR_Publication::remove_associated_subscription:")
                      ACE_TEXT(" calling pub %d with sub %d\n"),
